[package]
name = "hive"
version = "0.1.0"
edition = "2021"
description = "A Rust port of plf::hive — a bucket-based, unordered container with stable references, O(1) insertion/erasure, and memory reuse"
license = "Zlib"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "comparison"
harness = false
