[package]
name = "hive"
version = "0.1.0"
edition = "2021"
description = "A Rust port of plf::hive — a bucket-based, unordered container with stable references, O(1) insertion/erasure, and memory reuse"
license = "Zlib"

[features]
default = ["std"]
std = []
allocator_api = ["pin-init?/alloc"]
pin-init = ["dep:pin-init", "pin-init/alloc_pin_with"]
safe_object_pool_custom_allocator = []

[dependencies]
pin-init = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
gungraun = "0.19.0"

[profile.bench]
debug = true

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "gungraun_comparison"
harness = false
